# frequenz-api-microgrid

./: .cookiecutter-replay.json  .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  build-py-proto  minimum-requirements-ci.txt  mkdocs.yml  noxfile.py  pyproject.toml  setup.py  tox.ini  versions.json
.github/: dependabot.yml  keylabeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yaml  labeler.yml  release-notes-check.yml
docs/: SUMMARY.md
latest/protobuf-reference/SUMMARY/: index.html
latest/protobuf-reference/frequenz/api/microgrid/battery/: index.html
latest/protobuf-reference/frequenz/api/microgrid/common/: index.html
latest/protobuf-reference/frequenz/api/microgrid/ev_charger/: index.html
latest/protobuf-reference/frequenz/api/microgrid/grid/: index.html
latest/protobuf-reference/frequenz/api/microgrid/inverter/: index.html
latest/protobuf-reference/frequenz/api/microgrid/meter/: index.html
latest/protobuf-reference/frequenz/api/microgrid/microgrid/: index.html
latest/protobuf-reference/frequenz/api/microgrid/sensor/: index.html
latest/python-reference/SUMMARY/: index.html
latest/python-reference/frequenz/api/microgrid/: index.html
latest/python-reference/frequenz/api/microgrid/battery_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/battery_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/common_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/common_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/ev_charger_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/ev_charger_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/grid_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/grid_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/inverter_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/inverter_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/meter_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/meter_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/microgrid_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/microgrid_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/sensor_pb2/: index.html
latest/python-reference/frequenz/api/microgrid/sensor_pb2_grpc/: index.html
latest/python-reference/frequenz/api/microgrid/v1/: index.html
next/: 404.html  index.html  objects.inv
next/CONTRIBUTING/: index.html
next/SUMMARY/: index.html
next/protobuf-reference/SUMMARY/: index.html
next/protobuf-reference/frequenz/api/microgrid/battery/: index.html
next/protobuf-reference/frequenz/api/microgrid/common/: index.html
next/protobuf-reference/frequenz/api/microgrid/ev_charger/: index.html
next/protobuf-reference/frequenz/api/microgrid/fuse/: index.html
next/protobuf-reference/frequenz/api/microgrid/grid/: index.html
next/protobuf-reference/frequenz/api/microgrid/inverter/: index.html
next/protobuf-reference/frequenz/api/microgrid/meter/: index.html
next/protobuf-reference/frequenz/api/microgrid/microgrid/: index.html
next/protobuf-reference/frequenz/api/microgrid/precharge_module/: index.html
next/protobuf-reference/frequenz/api/microgrid/precharger/: index.html
next/protobuf-reference/frequenz/api/microgrid/relay/: index.html
next/protobuf-reference/frequenz/api/microgrid/sensor/: index.html
next/protobuf-reference/frequenz/api/microgrid/voltage_transformer/: index.html
next/python-reference/SUMMARY/: index.html
next/python-reference/frequenz/api/microgrid/: index.html
next/python-reference/frequenz/api/microgrid/battery_pb2/: index.html
next/python-reference/frequenz/api/microgrid/battery_pb2_grpc/: index.html
next/python-reference/frequenz/api/microgrid/common_pb2/: index.html
next/python-reference/frequenz/api/microgrid/common_pb2_grpc/: index.html
next/python-reference/frequenz/api/microgrid/ev_charger_pb2/: index.html
next/python-reference/frequenz/api/microgrid/ev_charger_pb2_grpc/: index.html
next/python-reference/frequenz/api/microgrid/fuse_pb2/: index.html
next/python-reference/frequenz/api/microgrid/fuse_pb2_grpc/: index.html
next/python-reference/frequenz/api/microgrid/grid_pb2/: index.html
next/python-reference/frequenz/api/microgrid/grid_pb2_grpc/: index.html
next/python-reference/frequenz/api/microgrid/inverter_pb2/: index.html
next/python-reference/frequenz/api/microgrid/inverter_pb2_grpc/: index.html
next/python-reference/frequenz/api/microgrid/meter_pb2/: index.html
next/search/: search_index.json
proto/frequenz/api/microgrid/: battery.proto  common.proto  ev_charger.proto  fuse.proto  grid.proto  inverter.proto  meter.proto  microgrid.proto  precharge_module.proto  precharger.proto  relay.proto  sensor.proto  voltage_transformer.proto
proto/frequenz/api/microgrid/v1/: battery.proto  common.proto  ev_charger.proto  fuse.proto  grid.proto  inverter.proto  meter.proto  microgrid.proto  precharger.proto  relay.proto  sensor.proto  voltage_transformer.proto
py/frequenz/api/microgrid/: __init__.py
py/frequenz/api/microgrid/v1/: __init__.py
pytests/: test_microgrid.py
v0.15/: 404.html  index.html
v0.15/CONTRIBUTING/: index.html
v0.15/SUMMARY/: index.html
v0.15/protobuf-reference/SUMMARY/: index.html
v0.15/python-reference/SUMMARY/: index.html
v0.15/python-reference/frequenz/api/microgrid/: index.html
v0.15/search/: search_index.json
v0.16/: 404.html  index.html  mkdocstrings_autoapi.py  objects.inv
v0.16/CONTRIBUTING/: index.html
v0.16/SUMMARY/: index.html
v0.16/protobuf-reference/SUMMARY/: index.html
v0.16/python-reference/SUMMARY/: index.html
v0.16/python-reference/frequenz/api/microgrid/: index.html
v0/protobuf-reference/SUMMARY/: index.html
v0/python-reference/SUMMARY/: index.html
v0/python-reference/frequenz/api/microgrid/: index.html
(+96 files in other folders)
